@@ -43,6 +43,7 @@
         <module>pmd-strict</module>
         <module>all</module>
         <module>all-jdk-11</module>
+        <module>spotbugs</module>
     </modules>
 
 </project>
